Add user privacy levels
