# src/routes/user.ts
@@ -30,6 +30,7 @@ router.get('/', async (req: Authenticated_request, res) => {
 			email: user.email,
 			moneyBalance: user.moneyBalance,
 			role: user.role,
+			privacyLevel: user.privacyLevel,
 		},
 	});
 });
@@ -98,6 +99,7 @@ router.patch('/', async (req: Authenticated_request, res) => {
 			email: updatedUser.email,
 			moneyBalance: updatedUser.moneyBalance,
 			role: updatedUser.role,
+			privacyLevel: user.privacyLevel,
 		},
 	});
 });
@@ -119,6 +121,16 @@ router.post('/deposit', async (req: Authenticated_request, res) => {
 			balanceAfter: deposit.balanceAfter,
 		},
 	});
+});
+
+router.post('/changePrivacylevel', async (req: Authenticated_request, res) => {
+	const user = req.user;
+	const privacyLevel = req.body.privacyLevel;
+
+	await userStore.updateUser(user.userId, { privacyLevel: privacyLevel });
+
+	logger.info('User %s changed privacy level to %s', user.username, privacyLevel);
+	res.status(204).end();
 });
 
 router.post('/changeRfid', async (req: Authenticated_request, res) => {
